--- a/desafios/Desafio android/index.html
+++ b/desafios/Desafio android/index.html
@@ -80,7 +80,7 @@
 </main>
 
 <footer>
-<p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+<p>Site criado por João Guilherme para o CursoemVideo.</p>
 </footer>
 
 
