--- a/Exercicios/ex022/fundo001.html
+++ b/Exercicios/ex022/fundo001.html
@@ -4,24 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de imagens de fundo</title>
-
-    <style>
-        .quadrado{
-            border: 1px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <div class="quadrado">
+    <div class="quadrado" id="q1">
+    </div>
+
+    <div class="quadrado" id="q2">
 
     </div>
 
-    <div class="quadrado">
-
-    </div>
-
-    <div class="quadrado">
+    <div class="quadrado" id="q3">
 
     </div>
 
