--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -10,13 +10,21 @@
             background-color: black;
             background-image: url(Imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-size: cover;
+            background-attachment: fixed;
             
+            /* background shorthand
+            color > image > position > repeat >[size] > attachment
+            */
+
+            background: black url(Imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
+
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +35,11 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae cupiditate repellendus dignissimos natus nihil, veniam temporibus modi consequuntur quisquam dolorum deleniti earum voluptas similique suscipit soluta necessitatibus reiciendis blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae nesciunt illum facilis, excepturi saepe ipsa nisi magnam delectus dolores pariatur est provident expedita veritatis incidunt magni enim, voluptatem id quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde est quaerat tempora. Facere, explicabo similique pariatur sit facilis ad error odit rem doloremque voluptates voluptatum laboriosam cumque esse corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae cupiditate repellendus dignissimos natus nihil, veniam temporibus modi consequuntur quisquam dolorum deleniti earum voluptas similique suscipit soluta necessitatibus reiciendis blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae nesciunt illum facilis, excepturi saepe ipsa nisi magnam delectus dolores pariatur est provident expedita veritatis incidunt magni enim, voluptatem id quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde est quaerat tempora. Facere, explicabo similique pariatur sit facilis ad error odit rem doloremque voluptates voluptatum laboriosam cumque esse corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae cupiditate repellendus dignissimos natus nihil, veniam temporibus modi consequuntur quisquam dolorum deleniti earum voluptas similique suscipit soluta necessitatibus reiciendis blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae nesciunt illum facilis, excepturi saepe ipsa nisi magnam delectus dolores pariatur est provident expedita veritatis incidunt magni enim, voluptatem id quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde est quaerat tempora. Facere, explicabo similique pariatur sit facilis ad error odit rem doloremque voluptates voluptatum laboriosam cumque esse corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae cupiditate repellendus dignissimos natus nihil, veniam temporibus modi consequuntur quisquam dolorum deleniti earum voluptas similique suscipit soluta necessitatibus reiciendis blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae nesciunt illum facilis, excepturi saepe ipsa nisi magnam delectus dolores pariatur est provident expedita veritatis incidunt magni enim, voluptatem id quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde est quaerat tempora. Facere, explicabo similique pariatur sit facilis ad error odit rem doloremque voluptates voluptatum laboriosam cumque esse corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae cupiditate repellendus dignissimos natus nihil, veniam temporibus modi consequuntur quisquam dolorum deleniti earum voluptas similique suscipit soluta necessitatibus reiciendis blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae nesciunt illum facilis, excepturi saepe ipsa nisi magnam delectus dolores pariatur est provident expedita veritatis incidunt magni enim, voluptatem id quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde est quaerat tempora. Facere, explicabo similique pariatur sit facilis ad error odit rem doloremque voluptates voluptatum laboriosam cumque esse corrupti.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quae cupiditate repellendus dignissimos natus nihil, veniam temporibus modi consequuntur quisquam dolorum deleniti earum voluptas similique suscipit soluta necessitatibus reiciendis blanditiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae nesciunt illum facilis, excepturi saepe ipsa nisi magnam delectus dolores pariatur est provident expedita veritatis incidunt magni enim, voluptatem id quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque unde est quaerat tempora. Facere, explicabo similique pariatur sit facilis ad error odit rem doloremque voluptates voluptatum laboriosam cumque esse corrupti.</p>
     </main>
 
