--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -11,13 +11,11 @@
         table{
             border-collapse: collapse;
             width: 400px;
+            height: 400px;
         }
         td{
             border: 1px solid black;
             padding: 8px;
-        }
-        .linha{
-            background-color: lightgray;
         }
     </style>
 </head>
@@ -33,27 +31,26 @@
 -->
 
 <table>
-<table>
     <tr>
-        <td>a1</td>
-        <td>a2</td>
-        <td>a3</td>
+        <td>A1</td>
+        <td>B1</td>
+        <td>C1</td>
         
     </tr>
-    <tr class="linha">
-        <td>b1</td>
-        <td>b2</td>
-        <td>b3</td>
+    <tr>
+        <td>A2</td>
+        <td>B2</td>
+        <td>C2</td>
     </tr>
     <tr>
-        <td>c1</td>
-        <td>c2</td>
-        <td>c3</td>
+        <td>A3</td>
+        <td>B3</td>
+        <td>C3</td>
     </tr>
-    <tr class="linha">
-        <td>d1</td>
-        <td>d2</td>
-        <td>d3</td>
+    <tr>
+        <td>A4</td>
+        <td>B4</td>
+        <td>C4</td>
     </tr>
 </table>
 </table>
